2007-08-30  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.24.

2007-08-30  Guillem Jover  <guillem.jover@nokia.com>

	* README: Cleanup.

2007-08-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_dbus.c (conn, comm_dbus_finish, comm_dbus_init): Merge
	into ...
	(comm_dbus_send_app_died): ... here.

2007-08-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_dbus.c (comm_dbus_finish): Do not call dbus_shutdown,
	as libdbus is too eager throwing abort(3) around.

2007-08-20  Guillem Jover  <guillem.jover@nokia.com>

	* README: Refer to MAEMO_LAUNCHER_LIBS instead of
	MAEMO_LAUNCHER_LDFLAGS.

2007-08-20  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.24~.

2007-08-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.23.

2007-08-15  Guillem Jover  <guillem.jover@nokia.com>

	* README: Add support for DEB_BUILD_OPTIONS nolauncher.

2007-08-15  Guillem Jover  <guillem.jover@nokia.com>

	* README: Update to reflect the new debhelper script and pkg-config
	file support.

2007-08-15  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_dbus.c (comm_dbus_finish): Do not call
	dbus_connection_close for shared connections.

2007-08-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.23~.

2007-08-02  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.22.

2007-08-02  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/booster_gtk.c (init_cairo): Use PANGO_CAIRO_FONT_MAP to
	cast the PangoFontMap.

2007-08-02  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/summoner.c (summon_process) [DEBUG]: Move contents to ...
	[!DEBUG]: ... here. Replace print_env_args with print_prog_env_argv.

2007-08-02  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/search.c: New file.
	* launcher/search.h: Likewise.
	* launcher/prog.c (set_progname): Add a fourth argument specifying